--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <body>
     <h1>Calcular Area</h1>
-    <h3>Ingresar dato base</h3>
+    <p id="rotulo1">dato</p>
     <input type="number" id="datoBase" min="1" />
-    <h3>Ingresar dato altura</h3>
+    <p id="rotulo2"></p>
     <input type="number" id="datoAltura" min="1" />
     <br />
     <br />
